data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1856.wast
;; 7. **Test Forward Branch to Block with Incorrect Operand Types**:    - **Description**: Make a `br_if` conditional branch forward to a `block` where the operand stack does not match the `block`'s expected result types.    - **Constraint Checked**: Ensures forward branch conformance to block’s result type requirements.    - **Relation to Type Mismatch**: Validates operand stack types align with block outputs.

(assert_invalid
  (module
    (func (block (br_if 0 (f32.const 1.0)))))
  "type mismatch"
)